cmake_minimum_required(VERSION 2.8)

# Note: This cmakelists have only been verified on the Windows platform.

# Define project name
project(PluginManager)
set(PROJECT_NAME PluginManager)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
  message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

# Release by default
set(CMAKE_BUILD_TYPE "Release")  # Debug

set(OUTPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build)
set(MANAGER_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

############################################
# source
add_subdirectory(src)

############################################
# example
add_subdirectory(example/client)
add_subdirectory(example/plugin)